# Prism-Engine

./: .gitignore  CMakeLists.txt  Prism.c  Prism.h  README.md  makefile
api/: AssetManager.hpp  Engine.hpp  Platform.hpp  Prism.hpp  PrismAPI.hpp  Render (dep).hpp
api/core/: IO.hpp  Image.hpp  Input.hpp  Log.hpp  Math.hpp  Mesh.hpp  Time.hpp
api/include/: AssetManager.hpp  Audio.hpp  Engine.hpp  Platform.hpp  Prism.hpp  PrismAPI.hpp
api/include/core/: IO.hpp  Image.hpp  Input.hpp  Log.hpp  Math.hpp  Mesh.hpp  Time.hpp  UI.hpp
api/include/scene/: Behavior.hpp  Components.hpp  Entity.hpp  Scene.hpp  ScriptRegistry.hpp
api/scene/: Behavior.hpp  Components.hpp  Entity.hpp  Scene.hpp  ScriptRegistry.hpp
api/src/: AssetManager.cpp  Audio.cpp  Engine.cpp  Platform.cpp
api/src/core/: IO.cpp  Image.cpp  Input.cpp  Log.cpp  Math.cpp  Mesh.cpp  Time.cpp  UI.cpp
api/src/scene/: Behavior.cpp  Components.cpp  Entity.cpp  Scene.cpp  ScriptRegistry.cpp
assets/: asset_manager.c  asset_manager.h
assets/shaders/: animated.vert  basic.frag  basic.vert  basic2.frag  default.frag  default.vert  deferred_light.frag  deferred_post.frag  deferred_spot_volume.frag  deferred_volume.frag  deferred_volume.vert  g_buffer.frag  g_buffer.vert  g_buffer_skinned.vert  shadow.frag  shadow.vert  shadow_point.frag  shadow_point.geom  shadow_point_skinned.vert  shadow_point_static.vert  shadow_skinned.vert  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag  ui.frag  ui.vert
audio/: audio.h  audio_miniaudio.c
core/: core.h  event.h  image.c  image.h  input.c  input.h  io.c  io.h  ioCore.c  io_core.c  io_core.h  log.c  log.h  mathCore.h  math_core.h  meshCore.c  meshCore.h  mesh_core.c  mesh_core.h  timeCore.c  timeCore.h  time_core.c  time_core.h  ui_core.c  ui_core.h
core/math/: Matrix4.c  Matrix4.h  Quaternion.c  Quaternion.h  Vector2.c  Vector2.h  Vector3.c  Vector3.h  Vector4.c  Vector4.h
platform/: platform.h  platformCore.h  platform_core.h
platform/sdl/: sdl_platform.c
render/: render.c  render.h
render/headless/: render_headless.c
render/opengl/: render_opengl.c
scene/: component.c  entity.c  physicsBridge.cpp  physicsBridge.h  physics_bridge.c  physics_bridge.cpp  physics_bridge.h  scene.c  scene.h  scene.serializer.c  sceneSerializer.c  scene_serializer.c  scene_structures.h  transform.c
